# LearnOpenGL-Starter-CMake

./: CMakeLists.txt  README.md
learnopengl/: CMakeLists.txt  app.cpp
